Relocate jdk20 specific tests.